feat: add user activity feed
